@@ -1,5 +1,14 @@
 1998-03-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
+	* emu-20.el (mime-charset-coding-system-alist): Use 'defcustom.
+
+1998-03-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
+
+	* emu-20.el: Require 'wid-edit when compile.
+
+
+1998-03-25  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
+
 	* APEL: Version 7.5 was released.
 
 1998-03-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
